--- a/app/global-styles/Header.css
+++ b/app/global-styles/Header.css
@@ -1,33 +1,74 @@
-
 /* ----- Header Components ----- */
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; 
+  backdrop-filter: blur(2px);
+  color: var(--primary-dark);
+  padding: 1rem;
+  z-index: 2;
+}
+
+.logo-container {
+  max-width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.link-container {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  font-weight: bold;
+  color: var(--secondary-accent)
+}
+
+.nav-link {
+  margin: 0 1.5rem;
+}
+
+.nav-link:hover {
+  text-decoration: wavy underline;
+}
+
+.click {
+  border-radius: 6px;
+  border: 2px solid var(--primary-accent);
+  background-color: var(--primary-accent);
+  margin: 0 1.5rem;
+  padding: .5rem .5rem;
+  color: var(--primary-white);
+}
+
+.click:hover {
+  background-color: transparent;
+  color: var(--primary-dark);
+}
+
+.button-text {
+  color: var(--primary-white);
+  text-decoration: none;
+}
+
+.button-text:hover{
+  color: var(--primary-white);
+}
+
+.icon{
+  width: 4.5rem;
+}
+
+@media only screen and (max-width: 840px) {
+  .header {
     display: flex;
     justify-content: center;
-    background-color: var(--primary-white);
-    color: var(--primary-black);
+    background-color: var(--primary-dark);
     padding: 1rem;
   }
-  
-  .headerContainer{
-    max-width: 1500px;
-    margin: 0 auto;
-    padding: 0 1rem;
-    text-align: center;
-  }
-  
-  .logo {
-    text-align: center;
-    margin-bottom: 0.5rem;
-    font-weight: 900;
-  }
-  
-  .logo a {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: var(--primary-black);
-    text-decoration: none;
-  }
-  
-  .logo a:hover {
-    color: var(--secondary-accent) 
-  }
+}
+
