updated styles for mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -264,10 +264,6 @@ body.side-nav-open {
     text-align: center;
   }
 
-  /* .landing-header{
-    font-size: 32pt;
-  } */
-
   .landing-banner{
     display: flex;
     justify-content: center;
@@ -510,6 +506,7 @@ body.side-nav-open {
   .module {
     display: flex;
     margin-bottom: 1.5rem;
+    margin: 0 1rem 1.5rem 1rem;
     text-align: left;
     flex-direction: column;
   }
@@ -561,7 +558,7 @@ body.side-nav-open {
 }
 
 .buffer{
-  margin: 8rem;
+  margin: 6rem;
 }
 /* ----- Experimental ----- */
 .waveSpacer{
